<?xml version="1.0"?>
<package format="3">
  <name>gazebo_ros_tts</name>
  <version>1.0.0</version>

  <description>
    Gazebo Classic ROS2 Text-to-Speech Plugin
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Gazebo Classic -->
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
